<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:padding="6dip">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_original_url" />
		<TextView android:id="@+id/text_original_url"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="http://www.google.com/" />
		<ProgressBar android:id="@+id/progress_url"
			android:paddingTop="10dip" android:paddingBottom="10dip"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" />
		<TextView android:id="@+id/text_url" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge"
			android:paddingTop="10dip" android:paddingBottom="10dip"
			android:layout_gravity="center" android:visibility="gone" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center">
			<Button android:id="@+id/button_send" android:text="@string/button_send"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minEms="5" />
			<Button android:id="@+id/button_copy" android:text="@string/button_copy"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minEms="5" />
			<Button android:id="@+id/button_cancel" android:text="@string/button_cancel"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minEms="5" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>

